Another fix for contentnav scrollbars

--- a/source/widgets/contentnav/contentnav.scss
+++ b/source/widgets/contentnav/contentnav.scss
@@ -19,15 +19,16 @@
   height: 100%;
   position: relative;
 
-  overflow-x: scroll;
+  @include mq($to: $sizeBreakpointMedium) {
+	overflow-x: scroll;
+  }
 
   ul {
     position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
-
-    display: flex;
+	display: flex;
   }
 }
 
@@ -74,7 +75,7 @@
   }
 
 	//The Active State
-	&.is_active {
+	&.active {
 		position: relative;
 
 		&:before {
